# Cmake_exemple

./: CMakeLists.txt
app/: CMakeLists.txt  app.cpp
include/sharedlib/: sharedlib.hpp
scr/: CMakeLists.txt
scr/sharedlib/: CMakeLists.txt  sharedlib.cpp
test/: CMakeLists.txt
