#---------------------------------------------------------------------#
#------------------------Установка версии Cmake ----------------------#
#---------------------------------------------------------------------#
cmake_minimum_required(VERSION 3.5)
#---------------------------------------------------------------------#
#----------------------------Данные проекта --------------------------#
#---------------------------------------------------------------------#
project(Cmake_test
        VERSION 0.0.1
        DESCRIPTION "Work emulator Microcontroller emulator"
        LANGUAGES CXX)
#---------------------------------------------------------------------#
#----------------------Установка стандарта языка ---------------------#
#---------------------------------------------------------------------#
set(CMAKE_CXX_STANDARD 20)
#---------------------------------------------------------------------#
#--------------Установка директории для исполняемого файла -----------#
#---------------------------------------------------------------------#
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/app)
#---------------------------------------------------------------------#
#------------------------Добавление директорий -----------------------#
#---------------------------------------------------------------------#
add_subdirectory(scr)
add_subdirectory(app)
#---------------------------------------------------------------------#
#--------------------------Файл тестов -------------------------------#
#---------------------------------------------------------------------#
