#---------------------Установка имени тестов ----------------------------------#
message("-- TEST")
set(TARGET_NAME libshared)
set(LINK_NAME testlibshared)
#------------------------------------------------------------------------------#
#------------------Установка локального имени для линковки---------------------#
set(MODULE_NAME test_manager_test)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED on)
#------------------------------------------------------------------------------#
#---------------------SET PROTO FILE-------------------------------------------#
#------------------------------------------------------------------------------#
#-----------------------INCLUDE HEADER-----------------------------------------#
include(../include/sharedlib/sharedlib.h)
#------------------------------------------------------------------------------#
#---------------------GENERATE AUTOCODE----------------------------------------#
#------------------------------------------------------------------------------#
#---------------------ADD SOURCE-----------------------------------------------#
set(SOURCE test_1.cpp)
#------------------------------------------------------------------------------#
#---------------------FIND PACKAGES--------------------------------------------#
find_package(Threads REQUIRED)
#------------------------------------------------------------------------------#
#---------------------ADD DEFINITIONS------------------------------------------#
#------------------------------------------------------------------------------#

add_executable(${TARGET_NAME} ${SOURCE})

target_compile_features(${TARGET_NAME} PRIVATE cxx_std_20)
add_test(NAME ${LINK_NAME} COMMAND ${TARGET_NAME})